@@ -40,9 +40,8 @@ import org.openehealth.ipf.commons.ihe.xds.core.validate.requests.SubmitObjectsR
 import org.openehealth.ipf.commons.ihe.xds.core.validate.responses.RegistryResponseValidator;
 import org.openehealth.ipf.commons.ihe.xds.iti42.Iti42PortType;
 
-import java.io.IOException;
 import java.net.URISyntaxException;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -61,7 +60,7 @@ public class CxfEndpointTest {
     private JettyServer server;
 
     @BeforeEach
-    public void setUp() throws IOException, URISyntaxException {
+    public void setUp() throws URISyntaxException {
         port = ServletServer.getFreePort();
         server = new JettyServer();
         server.setContextResource(getClass().getResource("/cxf-context.xml").toURI().toString());
@@ -79,7 +78,7 @@ public class CxfEndpointTest {
     }
 
     @Test
-    public void test() throws Exception {
+    public void test() {
         runRequestAndExpectFailure();
 
         JaxWsServiceFactory<? extends XdsAuditDataset> serviceFactory = new JaxWsRequestServiceFactory<>(
@@ -121,7 +120,7 @@ public class CxfEndpointTest {
         var client = (Iti42PortType) clientFactory.getClient();
         var request = SampleData.createRegisterDocumentSet();
         var ebXMLReq = reqTransformer.toEbXML(request);
-        var rawReq = (SubmitObjectsRequest) ebXMLReq.getInternal();
+        var rawReq = ebXMLReq.getInternal();
         var rawResp = client.documentRegistryRegisterDocumentSetB(rawReq);
         var ebXMLResp = new EbXMLRegistryResponse30(rawResp);
         return respTransformer.fromEbXML(ebXMLResp);
@@ -152,12 +151,12 @@ public class CxfEndpointTest {
             var response = new Response(Status.SUCCESS);
             if (!request.getSubmissionSet().getEntryUuid().equals("submissionSet01")) {
                 response.setStatus(Status.FAILURE);
-                response.setErrors(Arrays.asList(new ErrorInfo(ErrorCode.REGISTRY_ERROR, "unexpected value", Severity.ERROR, null, null)));
+                response.setErrors(List.of(new ErrorInfo(ErrorCode.REGISTRY_ERROR, "unexpected value", Severity.ERROR, null, null)));
             }
 
             var ebXMLResp = respTransformer.toEbXML(response);
             respValidator.validate(ebXMLResp, ITI_42);
-            return (RegistryResponseType) ebXMLResp.getInternal();
+            return ebXMLResp.getInternal();
         }
     }
 }
